<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/closeID"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross_button"
            android:tint="@color/colorTextPrimary"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_subject"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_subject_assign"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/itsOkBtnID"
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:layout_marginRight="2dp"
                android:textAllCaps="false"
                android:text="@string/Okey"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <Button
                android:id="@+id/exitBtnID"
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:layout_height="40dp"
                android:background="@color/colorRed"
                android:textAllCaps="false"
                android:text="@string/logout_text"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>


</LinearLayout>