<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shadow"
    android:padding="8dip"
    tools:context=".fragments.NoticeViewFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:padding="8dip"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <TextView
            android:id="@+id/notice_title"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView

                android:text="@string/posted_by"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/notice_posted_by"
                android:text=""
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:text="@string/posted_on"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/notice_posted_on"
                android:text=""
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView

            android:text="@string/details"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/notice_description"
            android:text=""
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>





</LinearLayout>
</ScrollView>
</LinearLayout>